--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@
 /*----------------------------------------*/
 
 html,
-body {
-	height: 100%;
+body {	
+	height: 100vh;
 	font-family: "Cairo", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
@@ -3466,3 +3466,4 @@ ol {
 		font-size: 24px;
 	}
 }
+
